dylanvu-portfolio/src/styles/project-card.css
:root {
    --project-card-side-size: 30rem;
    --project-card-edge-padding: 1.3rem;
}

.project-card-title {
    font-weight: bold;
    padding-top: var(--project-card-edge-padding);
    padding-left: var(--project-card-edge-padding);
    padding-right: var(--project-card-edge-padding);
}

.project-card-group {
    display: inline-grid;
    grid-template-columns: repeat(auto-fit, var(--project-card-side-size));
    justify-items: center;
    gap: 3rem;
    margin: 1rem;
    width: 100%;
    position: relative;
    justify-items: center;
    align-items: center;
    /* this actually makes the grid centered in the container */
    justify-content: center;
}

.project-card {
    width: var(--project-card-side-size);
    /* height: var(--project-card-side-size); */
    border-radius: 0.5rem;
    background-color: antiquewhite;
    transition: transform 0.2s ease-in-out;
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    display: grid;
    grid-template-rows: 0.5fr 3.5fr;
    align-items: center;
    height: 100%;
    margin: 1rem;
}

.project-card:hover {
    transform: scale(1.05) rotate(2deg);
}

.project-card-image-container {
    /* https: //stackoverflow.com/questions/67421778/next-js-image-layout-fill-is-broken */
    position: relative;
    margin: auto;
    /* max-height: 100%; */
    padding-left: var(--project-card-edge-padding);
    padding-right: var(--project-card-edge-padding);
    padding-bottom: var(--project-card-edge-padding);
}

